fix: text truncating and column sizing

--- a/frontend/src/components/Event/EventModal/eventModal.scss
+++ b/frontend/src/components/Event/EventModal/eventModal.scss
@@ -12,8 +12,7 @@
 		border-bottom: border();
 
 		.event-name {
-			@extend %text-truncate !optional;
-			width: 350px;
+			@extend %text-truncate;
 		}
 	}
 
